--- a/app/src/main/res/layout/fruit_item_layout.xml
+++ b/app/src/main/res/layout/fruit_item_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="fruit"
             type="com.tut.mywebsocket.model.FruitItem" />
@@ -18,9 +18,9 @@
             android:id="@+id/color"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:colorBackground="@{fruit.bagColor}"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
+            app:colorBackground="@{fruit.bagColor}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,9 +31,9 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
-            android:text="@{fruit.name}"
             android:background="#D8D8D8"
             android:padding="20dp"
+            android:text="@{fruit.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/color"
             app:layout_constraintTop_toTopOf="parent" />
